feat: connect redesign to paired media service
